--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,14 @@ header {
     z-index: 9999;
 }
 
+header small {
+    font-family: sans-serif;
+}
+
+a {
+    color: #2af;
+}
+
 a.twitterauth {
     position: absolute;
     right: 150px;
@@ -43,6 +51,7 @@ em {
 img.profile {
     float: left;
     margin-right: 3%;
+    max-width: 60px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25);
     border: 1px solid #D9D9D9;
 }
