--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -20,18 +20,32 @@
             Twitter Map | <small><a href="https://twitter.com/#!/search/superbowl" target="_blank">#superbowl</a> edition</small>
 
             <!--
-            <a class="twitterauth" href="/auth/twitter">
-                <img src="https://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png" />
-            </a>
-            -->
+                 <a class="twitterauth" href="/auth/twitter">
+                     <img src="https://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png" />
+                 </a>
+                 -->
 
-        </header>
+                 </header>
 
         <a href="http://github.com/nhunzaker/twittermap" target="_blank"><img style="position: absolute; z-index:9999; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
         
         <%- body %>
         
         <script src="/js/map.js"></script>
+
+        <script type="text/javascript">
+
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-19230428-3']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+
+        </script>
 
     </body>
 </html>
