--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-@import url("reset.css");
-
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 
 body {
@@ -23,6 +21,18 @@ header small {
 
 a {
     color: #2af;
+}
+
+a.info {
+    color: #aaa;
+    background: #222;
+    border-radius: 50px;
+    margin-left: 10px;
+    padding: 0 8px;
+}
+
+a.info:hover {
+    background: #333;
 }
 
 a.twitterauth {
@@ -54,4 +64,48 @@ img.profile {
     max-width: 60px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.25);
     border: 1px solid #D9D9D9;
+}
+
+
+
+/* About Styles */
+#about {
+    display: none;
+}
+#about:target {
+    background: #111;
+    border: 1px solid #222;
+    border-radius: 8px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.25);
+    color: #d9d9d9;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -175px;
+    margin-top: -175px;
+    width: 300px;
+    padding: 25px;
+}
+
+#about h2 {
+    color:#aaa;
+    text-shadow: 0 1px 2px #000;
+}
+
+#about hr {
+    border: 0;
+    border-top: 1px solid #222;
+}
+
+.close {
+    color: #fff;
+    position: relative;
+    top: -20px;
+    right: -15px;
+}
+
+.close:hover {
+    color: #f33;
+    text-shadow: 0 0 10px rgba(255,100,0,0.75);
 }
