--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -3,5 +3,7 @@
     <h2>Twittermap</h2>
     <p><small> by <a href="https://github.com/nhunzaker" target="_blank">Nate Hunzaker</a></small></p>
     <hr/>
-    <p>Twittermap measures sentiment for tweets around the world. It is an implementation of some exceptional research on sentiment analysis found <a href="http://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html" target="_blank">here</a>.</p>
+    <p>
+        Twittermap measures sentiment for tweets around the world. It is an implementation of some exceptional research on sentiment analysis found <a href="http://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html" target="_blank">here</a>.
+    </p>
 </div>
