--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,16 @@
+@import url("reset.css");
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 
 body {
-    font-family: sans-serif;
+    font-family: Helvetica, sans-serif;
+}
+
+h2 {
+    font: bold 1.5em/1.5em Helvetica, sans-serif;
+}
+
+small {
+    font-size: 0.775em;
 }
 
 header {
@@ -68,6 +77,7 @@ img.profile {
 #about {
     display: none;
 }
+
 #about:target {
     background: #111;
     border: 1px solid #222;
@@ -89,16 +99,23 @@ img.profile {
     text-shadow: 0 1px 2px #000;
 }
 
+#about p {
+    font-size: 0.8em;
+    line-height: 1.5em;
+}
+
 #about hr {
     border: 0;
     border-top: 1px solid #222;
+    margin: 8px 0 10px;
 }
 
 .close {
     color: #fff;
-    position: relative;
-    top: -20px;
-    right: -15px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
 }
 
 .close:hover {
